Fix layout on iOS

--- a/packages/client/src/index.css
+++ b/packages/client/src/index.css
@@ -1,5 +1,5 @@
 @import 'tailwindcss';
-@import "tw-animate-css";
+@import 'tw-animate-css';
 
 @custom-variant dark (&:is(.dark *));
 
@@ -116,5 +116,12 @@
   }
   body {
     @apply bg-background text-foreground;
+  }
+}
+
+/* To fix the layout on iOS */
+@supports (-webkit-touch-callout: none) {
+  .h-screen {
+    height: -webkit-fill-available;
   }
 }
